--- a/app/templates/StudentModule/StudentDashboard.html
+++ b/app/templates/StudentModule/StudentDashboard.html
@@ -37,6 +37,8 @@
                     <a href="{{ url_for('main.inprogressunits') }}">In Progress Units</a></li>
                 <li><i class="fa-solid fa-person" style="color:#6F251B;"></i>
                     <a href="">Mentor Information</a></li>
+                <li><i class="fa-solid fa-person" style="color:#6F251B;"></i>
+                    <a href="{{url_for('main.viewprogressreport')}}">Progress Report Information</a></li>
             </ul>
         </div>
         <div class="main-content">
