--- a/app/templates/FacultyAdmin/FAdminManageCourse.html
+++ b/app/templates/FacultyAdmin/FAdminManageCourse.html
@@ -54,7 +54,7 @@
             <p>Admin Navigation Panel</p>
             <ul>
                 <li><i class="fa-solid fa-house" style="color: #6F251B;" class = "active"></i>
-                    <a href="{{url_for('main.admin_dashboard')}}">Faculty Admin Dashboard</a></li>
+                    <a href="{{url_for('main.fadmindashboard')}}">Faculty Admin Dashboard</a></li>
                 <li><i class="fa-regular fa-user" style="color: #6F251B"></i></i>
                     <a href="">Manage User Accounts</a></li>
                 <li><i class="fa-solid fa-book" style="color:#6F251B;"></i>
