--- a/app/templates/AdminModule/RegisterUser.html
+++ b/app/templates/AdminModule/RegisterUser.html
@@ -90,11 +90,49 @@
             color: #E64545;
             margin: 5px 0;
         }
+        .flash {
+            width: 50%;
+            padding: 10px;
+            margin: 20px 0 10px 0;
+            border-radius: 5px;
+            font-size: 16px;
+            z-index: 10;
+            position: relative;
+            animation: fadeIn 1s ease-in-out;
+        }
+
+        .flash.success {
+            background-color: #28a745;
+            color: white;
+        }
+
+        .flash.error {
+            background-color: #dc3545;
+            color: white;
+        }
+
+        .flash.warning {
+            background-color: #ffc107;
+            color: black;
+        }
+
+        .flash-messages {
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="left-section">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <div class="flash-messages">
+                {% for category, message in messages %}
+                    <div class="flash {{ category }}">{{ message }}</div>
+                {% endfor %}
+            </div>
+        {% endif %}
+    {% endwith %}
             <h1>Register User</h1>
             <form method="POST" action="{{ url_for('main.register') }}">
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
@@ -114,7 +152,7 @@
                     <option value="4">Faculty Admin</option>
                     <option value="1">Student</option>
                     <option value="2">Lecturer</option>
-                    <option value="3">Mentor</option>
+                    <option value="3" hidden>Mentor</option>
                 </select>
                 <button type="submit">Register</button> 
             </form>            
