--- a/app/templates/FacultyAdmin/StudentPredictions.html
+++ b/app/templates/FacultyAdmin/StudentPredictions.html
@@ -36,7 +36,7 @@
             <p>Faculty Admin Navigation Panel</p>
             <ul>
                 <li><i class="fa-solid fa-house" style="color: #6F251B;" class = "active"></i>
-                    <a href="{{url_for('main.admin_dashboard')}}">Faculty Admin Dashboard</a></li>
+                    <a href="{{url_for('main.fadmindashboard')}}">Faculty Admin Dashboard</a></li>
                 <li><i class="fa-regular fa-user" style="color: #6F251B"></i></i>
                     <a href="">Manage User Accounts</a></li>
                 <li><i class="fa-solid fa-book" style="color:#6F251B;"></i>
@@ -49,7 +49,7 @@
         <!-- Main Content Section -->
         <div class="main-content">
             <div class="spaceforbanner">
-                <h2>Student Module</h2>
+                <h2>Admin Module</h2>
             </div>
 
             <!-- Personal Info Section -->
@@ -58,7 +58,7 @@
                 <div class="profile-info">
                     <!-- View Predictions Button -->
                     <div class="button-container">
-                        <button class="analytics-btn" onclick="window.location.href=''">
+                        <button class="analytics-btn" onclick="window.location.href='{{url_for('main.viewanalytics')}}'">
                             <i class="fa-solid fa-book"></i> View Analytics
                         </button>
                     </div>
