--- a/app/templates/LecturerModule/ManageGrades.html
+++ b/app/templates/LecturerModule/ManageGrades.html
@@ -129,8 +129,6 @@
                     <a href="{{url_for('main.viewattendanceunits')}}">Manage Attendance</a></li>
                 <li><i class="fa-solid fa-clipboard" style="color:#6F251B;"></i>
                     <a href="{{url_for('main.viewgradesunits')}}">Manage Grades</a></li>
-                <li><i class="fa-solid fa-person" style="color:#6F251B;"></i>
-                    <a href="">Mentor Information</a></li>
             </ul>
         </div>
 
@@ -151,7 +149,7 @@
             </div>
 
             <div class="content-body">
-                <h2>Edit Attendance</h2>
+                <h2>Edit Grades</h2>
                 <table id="studentTable">
                     <thead>
                         <tr>
