--- a/app/templates/FacultyAdmin/ViewAnalytics.html
+++ b/app/templates/FacultyAdmin/ViewAnalytics.html
@@ -79,7 +79,7 @@
             <!-- Analytics Section -->
             <div class="profile-info">
                 <div class="container">
-                    <h2>Student Analytics</h2>
+                    <h2>Pie Chart for Prediction Proportion</h2>
                     <canvas id="analyticsChart"></canvas>
                 </div>
             </div>
